--- a/css/main.css
+++ b/css/main.css
@@ -511,6 +511,11 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
     margin: auto;
   }
 }
+@media (max-width: 550px) {
+  .about-imgs {
+    width: 100%;
+  }
+}
 .about-imgs .about-img {
   width: 100%;
   height: 100%;
@@ -538,8 +543,13 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
 }
 @media (max-width: 993px) {
   .categories-list {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .categories-list {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -556,10 +566,9 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
     padding: 20px 15px;
   }
 }
-@media (max-width: 993px) {
+@media (max-width: 767px) {
   .category-item {
     width: 100%;
-    max-width: 370px;
     margin: auto;
     padding: 20px;
   }
@@ -687,8 +696,13 @@ html[dir=ltr] .category-item .category-more svg {
 }
 @media (max-width: 993px) {
   .services-list {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .services-list {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -721,7 +735,6 @@ html[dir=ltr] .category-item .category-more svg {
 @media (max-width: 993px) {
   .service-item {
     width: 100%;
-    max-width: 370px;
     margin: auto;
   }
 }
@@ -817,6 +830,16 @@ html[dir=ltr] .category-item .category-more svg {
     gap: 15px;
   }
 }
+@media (max-width: 767px) {
+  .news-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 550px) {
+  .news-grid {
+    grid-template-columns: 1fr;
+  }
+}
 
 .news-row {
   display: grid;
@@ -857,7 +880,6 @@ html[dir=ltr] .category-item .category-more svg {
 @media (max-width: 767px) {
   .news-item {
     width: 100%;
-    max-width: 370px;
     margin: auto;
     flex-direction: column;
     padding: 15px;
@@ -3040,6 +3062,7 @@ html[dir=ltr] .footer-list a:hover {
   .filter-content {
     width: 100%;
     margin: 15px 0 0;
+    justify-content: center;
   }
 }
 .filter-content .filter-label {
@@ -3063,7 +3086,7 @@ html[dir=ltr] .footer-list a:hover {
 }
 @media (max-width: 767px) {
   .filter-content .filter-select {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
