--- a/css/main.css
+++ b/css/main.css
@@ -1802,8 +1802,9 @@ html[dir=ltr] .select2-container .select2-selection--single .select2-selection__
 }
 .select2-container .select2-results > .select2-results__options::-webkit-scrollbar {
   background-color: #fff;
-  width: 7px;
+  width: 6px;
   height: 0px;
+  border-radius: 3px;
 }
 .select2-container .select2-results > .select2-results__options::-webkit-scrollbar-thumb {
   background-color: #a5a5a5;
@@ -2169,6 +2170,52 @@ html[dir=ltr] .modal-thumbs-slider .swiper-btn.swiper-btn-prev svg {
   filter: blur(0);
 }
 
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 9999;
+}
+.preloader .preloader-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.preloader .preloader-logo-cont {
+  position: relative;
+  width: 150px;
+}
+.preloader .preloader-logo-cont .colored {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  animation: loader 5s linear infinite;
+}
+.preloader .preloader-logo-cont .colored img {
+  position: absolute;
+  bottom: 0;
+}
+.preloader .preloader-logo-cont .filterd {
+  opacity: 0.5;
+  filter: grayscale(1);
+}
+
+@keyframes loader {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
+}
 body {
   padding: 189px 0 0;
 }
