--- a/css/main.css
+++ b/css/main.css
@@ -858,6 +858,16 @@ html[dir=ltr] .category-item .category-more svg {
     gap: 15px;
   }
 }
+@media (max-width: 767px) {
+  .news-row {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 550px) {
+  .news-row {
+    grid-template-columns: 1fr;
+  }
+}
 
 @media (min-width: 1200px) {
   .ralated-list {
@@ -977,26 +987,26 @@ html[dir=ltr] .category-item .category-more svg {
   color: #004185;
 }
 @media (min-width: 1200px) {
-  .news-grid .news-item:first-of-type {
+  .news-grid .news-item:first-of-type, .news-grid .news-item.main {
     grid-row: 1/3 span;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     padding: 20px;
   }
-  .news-grid .news-item:first-of-type .news-img {
+  .news-grid .news-item:first-of-type .news-img, .news-grid .news-item.main .news-img {
     aspect-ratio: 616/349;
     width: 100%;
     height: auto;
     border-radius: 20px;
   }
-  .news-grid .news-item:first-of-type .news-summary {
+  .news-grid .news-item:first-of-type .news-summary, .news-grid .news-item.main .news-summary {
     padding: 25px 5px 0;
   }
-  .news-grid .news-item:first-of-type .news-numbers {
+  .news-grid .news-item:first-of-type .news-numbers, .news-grid .news-item.main .news-numbers {
     margin-bottom: 10px;
   }
-  .news-grid .news-item:first-of-type .news-name {
+  .news-grid .news-item:first-of-type .news-name, .news-grid .news-item.main .news-name {
     height: auto;
     -webkit-line-clamp: 1;
   }
